printers: Don't fail when adding Samba printers with spaces

Escape characters in URIs composed for SMB shares since their names
can contain characters which are not allowed in URIs.

https://bugzilla.gnome.org/show_bug.cgi?id=699942